--- a/tentang.html
+++ b/tentang.html
@@ -2517,8 +2517,24 @@
                     </p>
                   </div>
                 </div>
+                <div class="elementor-element elementor-element-31f05a9e animated-slow elementor-widget__width-auto elementor-invisible elementor-widget elementor-widget-button"
+								data-id="31f05a9e" data-element_type="widget"
+								data-settings="{&quot;_animation&quot;:&quot;fadeIn&quot;,&quot;_animation_delay&quot;:900}"
+								data-widget_type="button.default">
+								<div class="elementor-widget-container">
+									<div class="elementor-button-wrapper">
+										<a class="elementor-button elementor-button-link elementor-size-lg elementor-animation-pulse"
+											href="https://ptp.ahu.go.id/api/company/generate/certificate?transactionNumber=41250723350148888">
+											<span class="elementor-button-content-wrapper">
+												<span class="elementor-button-text">Legalitas</span>
+											</span>
+										</a>
+									</div>
+								</div>
+							</div>
               </div>
             </div>
+            
             <!-- <div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-6755f28" data-id="6755f28" data-element_type="column">
 			<div class="elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-1bf17f47 animated-slow elementor-invisible elementor-widget elementor-widget-image" data-id="1bf17f47" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeIn&quot;}" data-widget_type="image.default">
