--- a/tentang.html
+++ b/tentang.html
@@ -2491,7 +2491,7 @@
                   data-element_type="widget"
                   data-settings='{"_animation":"fadeIn"}'
                   data-widget_type="heading.default"
-                >
+                ><br><br><br><br><br><br><br>
                   <div class="elementor-widget-container">
                     <h1 class="elementor-heading-title elementor-size-default">
                       Tentang Alfatech
@@ -2516,7 +2516,7 @@
                       pemerintahan.
                     </p>
                   </div>
-                </div>
+                </div><br><br><br><br><br><br><br>
                 <div class="elementor-element elementor-element-31f05a9e animated-slow elementor-widget__width-auto elementor-invisible elementor-widget elementor-widget-button"
 								data-id="31f05a9e" data-element_type="widget"
 								data-settings="{&quot;_animation&quot;:&quot;fadeIn&quot;,&quot;_animation_delay&quot;:900}"
