--- a/tentang.html
+++ b/tentang.html
@@ -2524,7 +2524,7 @@
 								<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
 										<a class="elementor-button elementor-button-link elementor-size-lg elementor-animation-pulse"
-											href="https://ptp.ahu.go.id/api/company/generate/certificate?transactionNumber=41250723350148888">
+											href="https://drive.google.com/file/d/13gN-BAjNuwzYWEzEJN5Kn610dGMvWkf1/view?usp=drive_link">
 											<span class="elementor-button-content-wrapper">
 												<span class="elementor-button-text">Legalitas</span>
 											</span>
