--- a/tentang.html
+++ b/tentang.html
@@ -3222,7 +3222,7 @@
                   />
                 </div>
                 <div id="block-13" class="widget widget_block">
-                  <a target="_blank" href="https://www.instagram.com/"
+                  <a target="_blank" href="https://www.instagram.com/faiz.it"
                     ><img
                       class="lazy"
                       decoding="async"
