--- a/index.html
+++ b/index.html
@@ -1375,7 +1375,7 @@
                       pengembangan di bidang Teknologi Informasi (TI) yang inovatif dan
                       berkualitas tinggi. Berbasis di bawah PT. Alfatech Digital
                       Solution, kami bertekad menjadi mitra terpercaya bagi
-                      berbagai perusahaan, baik dari UMKM, perusahaan swasta maupun dari
+                      berbagai usaha, baik dari UMKM, perusahaan swasta maupun dari
                       pemerintahan, serta individu yang ingin meningkatkan keterampilan digital mereka.
                     </p>
 									</p><br><br><br><br><br>
