--- a/web.html
+++ b/web.html
@@ -654,7 +654,7 @@ body.custom-background { background-color: #f3f3f3; }
 				<div class="elementor-element elementor-element-31f05a9e animated-slow elementor-widget__width-auto elementor-invisible elementor-widget elementor-widget-button" data-id="31f05a9e" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeIn&quot;,&quot;_animation_delay&quot;:900}" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-lg elementor-animation-pulse" href="#get-quotation">
+					<a class="elementor-button elementor-button-link elementor-size-lg elementor-animation-pulse" href="https://wa.me/6285183103693?text=Halo%20Alfatech,%20saya%20ingin%20mendapatkan%20penawaran%20jasa%20pembuatan%20website%20company%20profile." role="link">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">Get Quotation</span>
 					</span>
@@ -1385,7 +1385,7 @@ body.custom-background { background-color: #f3f3f3; }
 		</div>
 					</div>
 		</section> -->
-				<section class="elementor-section elementor-top-section elementor-element elementor-element-a819500 elementor-section-content-middle elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="a819500" data-element_type="section" id="get-quotation" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
+				<!-- <section class="elementor-section elementor-top-section elementor-element elementor-element-a819500 elementor-section-content-middle elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="a819500" data-element_type="section" id="get-quotation" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
 						<div class="elementor-container elementor-column-gap-no">
 					<div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-867af1b" data-id="867af1b" data-element_type="column">
 			<div class="elementor-widget-wrap elementor-element-populated">
@@ -1431,7 +1431,7 @@ body.custom-background { background-color: #f3f3f3; }
 					</div>
 		</div>
 					</div>
-		</section>
+		</section> -->
 				</div>
 				<footer class="footer footer-black footer-big">
 			<div class="container">
