--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
     <meta name="author" content="Alfatech Digital Solutions" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/ico.webp" />
     <title>Alfatech Digital Solutions</title>
+    <script>
+      if (
+        localStorage.theme === "dark" ||
+        (!("theme" in localStorage) &&
+          window.matchMedia("(prefers-color-scheme: dark)").matches)
+      ) {
+        document.documentElement.classList.add("dark");
+      } else {
+        document.documentElement.classList.remove("dark");
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
