--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Learn more about our company, values, and the services we offer to help you succeed. Our mission is to provide excellent solutions for your needs."
+      content="Jasa Pembuatan Website Jombang : Jasa Buat Website Jombang MURAH, Jasa Buat Web Jombang, Jasa Pembuatan Web Jombang MURAH, Pembuatan website di Jombang dengan harga murah, bikin website murah Jombang, Website Jombang, jasa website Jombang, Buat web Jombang, pembuatan web profil Jombang, website portofolio Jombang, Online Shop Jombang, jasa pembuatan company profile Jombang, website eccommerce Jombang, Online Store Jombang, web developer Jombang, web responsif murah Jombang, pembuatan website murah Jombang, web murah Jombang, jasa pembuatan website murah Jombang, web murah Jombang, web desain murah Jombang, Bikin Web Murah Jombang, Buat Toko Online Jombang, buat Web Sekolah Jombang, jasa buat Web Portal Berita Jombang"
     />
     <meta
       name="keywords"
-      content="Company, Services, Solutions, Technology, Innovation, Business"
+      content="Jasa Pembuatan Website Jombang : Jasa Buat Website Jombang MURAH, Jasa Buat Web Jombang, Jasa Pembuatan Web Jombang MURAH, Pembuatan website di Jombang dengan harga murah, bikin website murah Jombang, Website Jombang, jasa website Jombang, Buat web Jombang, pembuatan web profil Jombang, website portofolio Jombang, Online Shop Jombang, jasa pembuatan company profile Jombang, website eccommerce Jombang, Online Store Jombang, web developer Jombang, web responsif murah Jombang, pembuatan website murah Jombang, web murah Jombang, jasa pembuatan website murah Jombang, web murah Jombang, web desain murah Jombang, Bikin Web Murah Jombang, Buat Toko Online Jombang, buat Web Sekolah Jombang, jasa buat Web Portal Berita Jombang"
     />
     <meta name="author" content="Alfatech Digital Solutions" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/ico.webp" />
