--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en-US">
 
 <head>
+	<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-5NWPN8ZK');</script>
+<!-- End Google Tag Manager -->
 	<style>
 		img.lazy {
 			width: auto;
@@ -1186,6 +1193,10 @@
 </head>
 
 <body class="home page-template-template-fullwidth page page-id-26394 wp-embed-responsive elementor-default elementor-kit-26394 elementor-page elementor-page-26394 hestia-light hestia-header-small hestia-header-transparent hestia-header-sticky hestia-header-fixed hestia-header-mobile hestia-header-mobile-sticky hestia-header-mobile-transparent hestia-header-mobile-small hestia-header-mobile-small-sticky">
+	<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5NWPN8ZK"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 	<div class="wrapper  default ">
 		<header class="header ">
 			<div style="display: none"></div>
